kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework-deployment
  namespace: homework
spec:
  replicas: 3
  selector:
    matchLabels:
      app: homework-app

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: homework-app
    spec:
      nodeSelector:
        homework: "true"
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 8000
        command:
        - /bin/sh
        - -c
        - |
          echo 'server { listen 8000; root /homework; }' > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'
        volumeMounts:
        - name: shared-volume
          mountPath: /homework
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "rm -f /homework/index.html"]
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: shared-volume
        emptyDir: {}
